# cpp-ethereum

./: CMakeLists.txt
exp/: main.cpp
extdep/boost/: large_int.hpp
extdep/boost/large_int/: base.hpp  cast.hpp  def.hpp  div.hpp  limits.hpp  shift.hpp  traits.hpp  utils.hpp
extdep/boost/large_int/impl/: base.ipp
libdaggerhashimoto/: CMakeLists.txt  README.md  SHA3.cpp  SHA3.h  TODO  benchmark.c  daggerhashimoto.c  daggerhashimoto.h  num.c  num.h  test.cpp
libdaggerhashimoto/ref/: Reference_Implementation.ipynb  results.tsv  results2.tsv  results3.tsv
libdevcore/: Common.h  CommonData.h  FixedHash.h
